--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "iban.js",
+  "name": "iban",
   "version": "0.0.1",
   "description": "A javascript library to validate, format and convert IBAN (International Bank Account Number) and BBAN (Basic Bank Account Number)",
   "main": "iban.js",
