--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "iban.js",
+  "name": "iban",
   "main": "iban.js",
   "version": "0.0.4",
   "homepage": "https://github.com/arhs/iban.js",
