Swtich to TypeScript and more mordern technologies

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,7 @@
-lib-cov
-*.seed
-*.log
-*.csv
-*.dat
-*.out
-*.pid
-*.gz
-
-pids
-logs
-results
-
-npm-debug.log
+dist
 node_modules
+.idea
+*.log
+.env
+.DS_Store
+coverage
