--- a/package.json
+++ b/package.json
@@ -2,13 +2,36 @@
   "name": "iban",
   "version": "0.0.14",
   "description": "A javascript library to validate, format and convert IBAN (International Bank Account Number) and BBAN (Basic Bank Account Number)",
-  "main": "iban.js",
+  "main": "dist/iban.cjs.js",
+  "module": "dist/iban.esm.js",
+  "browser": "dist/iban.umd.js",
   "devDependencies": {
-    "mocha": "~1.14.0",
-    "chai": "~1.8.1"
+    "@types/jest": "^26.0.20",
+    "@typescript-eslint/eslint-plugin": "4.12.0",
+    "@typescript-eslint/parser": "4.12.0",
+    "@wessberg/rollup-plugin-ts": "1.3.8",
+    "chai": "~1.8.1",
+    "commitizen": "4.2.2",
+    "cz-conventional-changelog": "3.3.0",
+    "eslint": "7.17.0",
+    "eslint-config-prettier": "7.1.0",
+    "eslint-plugin-import": "2.22.1",
+    "husky": "4.3.6",
+    "jest": "26.6.3",
+    "lint-staged": "10.5.3",
+    "prettier": "2.2.1",
+    "rimraf": "3.0.2",
+    "rollup": "2.36.0",
+    "rollup-plugin-terser": "7.0.2",
+    "semantic-release": "17.3.1",
+    "ts-jest": "^26.4.4",
+    "typescript": "4.1.3"
   },
   "scripts": {
-    "test": "mocha"
+    "start": "rollup -c -w",
+    "build": "rimraf dist/ && rollup -c",
+    "postbuild": "cp dist/iban.esm.js demo/web-app/js && cp dist/iban.esm.d.ts demo/web-app/js && cp dist/iban.cjs.js demo/node/js && cp dist/iban.cjs.d.ts demo/node/js",
+    "test": "jest"
   },
   "repository": "https://github.com/arhs/iban.js",
   "author": "Laurent VB",
