--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -18,25 +18,25 @@ jobs:
               run: yarn
             - name: Test
               run: yarn test
-    # coverage:
-    #     needs: [test]
-    #     name: Coverage
-    #     runs-on: ubuntu-18.04
-    #     steps:
-    #         - name: Checkout
-    #           uses: actions/checkout@v2
-    #         - name: Setup Node.js
-    #           uses: actions/setup-node@v2
-    #           with:
-    #               node-version: 14
-    #         - name: Install dependencies
-    #           run: yarn
-    #         - name: Test & publish code coverage
-    #           uses: paambaati/codeclimate-action@v2.7.5
-    #           env:
-    #               CC_TEST_REPORTER_ID: 084af3bbe3cc91bbc1736a554927945dffef81ed4395efac20b803770174a051
-    #           with:
-    #               coverageCommand: yarn test:coverage
+    coverage:
+        needs: [test]
+        name: Coverage
+        runs-on: ubuntu-18.04
+        steps:
+            - name: Checkout
+              uses: actions/checkout@v2
+            - name: Setup Node.js
+              uses: actions/setup-node@v2
+              with:
+                  node-version: 14
+            - name: Install dependencies
+              run: yarn
+            - name: Test & publish code coverage
+              uses: paambaati/codeclimate-action@v2.7.5
+              env:
+                  CC_TEST_REPORTER_ID: 5c55f5af95d36efcba3e7f32481457fcba461bd90f768b460c8831ef67caf6e7
+              with:
+                  coverageCommand: yarn test:coverage
     build:
         name: Build
         if: success()
